# evojax-experiment

./: main.py  pyproject.toml
examples/: train_slimevolley.py
examples/notebooks/: TutorialCallEvoJAXAlgorithmDirectly.ipynb
